feat: сделана отметка людей на мероприятии Author: Антон